# effects-harmony

./: .gitattributes  .gitignore  Compliance_Guidelines.md  README.md
SenseMeEffects/SenseMeEffects/: build-profile.json5  build-profile.json5.example  oh-package-lock.json5  oh-package.json5
SenseMeEffects/SenseMeEffects/AppScope/: app.json5
SenseMeEffects/SenseMeEffects/AppScope/resources/base/element/: string.json
SenseMeEffects/SenseMeEffects/entry/: build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
SenseMeEffects/SenseMeEffects/entry/src/main/: module.json5
SenseMeEffects/SenseMeEffects/entry/src/main/common/constants/: Constants.ets
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/: CMakeLists.txt  Index.cpp
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/Manager/: GLManager.cpp
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/log/: ohos_log.h
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/render/: GLRender.cpp  GLRender.h
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/sdk/include/: st_mobile_effect.h
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/sdk/wrapper/: STMobileWrapper.cpp  STMobileWrapper.h  STMobileWrapperNapi.cpp  STMobileWrapperNapi.h  json11.cpp  json11.hpp
SenseMeEffects/SenseMeEffects/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
SenseMeEffects/SenseMeEffects/hvigor/: hvigor-config.json5
SenseMeEffects/SenseMeEffects/mars_effects/: CHANGELOG.md  Index.ets  README.md  build-profile.json5  oh-package.json5
SenseMeEffects/SenseMeEffects/mars_effects/src/main/: module.json5
SenseMeEffects/SenseMeEffects/mars_effects/src/main/cpp/: CMakeLists.txt  log.h
SenseMeEffects/SenseMeEffects/stplayer/: Index.ets  build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
SenseMeEffects/SenseMeEffects/stplayer/src/main/: module.json5
SenseMeEffects/SenseMeEffects/stplayer/src/main/cpp/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  MediaRecorder.cpp  MediaRecorder.h  napi_init.cpp  native_common.h
SenseMeEffects/SenseMeEffects/stplayer/src/main/cpp/common/: common.h
SenseMeEffects/SenseMeEffects/stplayer/src/main/cpp/include/: AsyncCallbackInfo.h  RecordBean.h
SenseMeEffects/SenseMeEffects/stplayer/src/main/cpp/types/libstplayer/: index.d.ts  oh-package.json5
SenseMeEffects/SenseMeEffects/stplayer/src/main/cpp/utils/: log.h  tools.cpp  tools.h
SenseMeEffects/SenseMeEffects/stplayer/src/main/ets/: stplayer.ets  strecorder.ets
SenseMeEffects/st_mobile_sdk/docs/: SenseAR集成文档.md
SenseMeEffects/st_mobile_sdk/models/: M_SenseME_3Dmesh_360Head2396pt_p_1.0.0.1.model  M_SenseME_Face_Extra_Advanced_Template_p_2.5.0.model  M_SenseME_Finger_p_1.0.0.model  M_SenseME_Hand_p_7.2.0.model  M_SenseME_Segment_Clothes_p_1.0.2.2.model  M_SenseME_Segment_Hair_p_4.4.0.model  M_SenseME_Segment_Head_Instance_p_1.1.0.1.model  M_SenseME_Wrist_p_2.0.1.model
(+458 files in other folders)
